fix: z-index of the Menu Component
When the Menu Component was on the same line as a ProductCard Component image, it caused the menu icons to disappear.

--- a/app/components/Menu/styles.module.css
+++ b/app/components/Menu/styles.module.css
@@ -2,6 +2,7 @@
     width: 100%;
     padding: 0 1rem;
     position: fixed;
+    z-index: 999;
     bottom: 0;
     display: flex;
     justify-content: space-around;
